kubernates/node2-destination-rule-canary-release.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: node2-rule
  namespace: default
spec:
  host: node2
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
